grammar_f.txt
Program -> Declarationlist eof .

Declarationlist -> Declaration Declarationlist.
Declarationlist -> .

Declaration -> Typespecifier _add id_ id AA.

Typespecifier -> _type(void)_ void .
Typespecifier -> _type(int)_ int .

AA -> Fundeclaration.
AA -> Vardeclaration _var_.

Vardeclaration -> E1.

Fundeclaration -> _fun start_ c_ ( Params ) _fun params end_ Compoundstmt _fun finished_.

E1 -> ;.
E1 -> [ num ] ;.

Compoundstmt -> { Declarationlist Statementlist } .

Statementlist -> .
Statementlist -> Statement Statementlist.

Statement -> Switchstmt.
Statement -> Returnstmt.
Statement -> Iterationstmt.
Statement -> Selectionstmt.
Statement -> Compoundstmt.
Statement -> Expressionstmt.

Expressionstmt -> ; .
Expressionstmt -> break _s break_ c_break;.
Expressionstmt -> continue _s continue_ c_continue ;.
Expressionstmt -> Expression ;.

Selectionstmt -> if ( Expression ) c_if1 Statement c_if2 else Statement c_if3 .

Iterationstmt -> _while start_ while c_whileFirst ( Expression ) c_saveLabel Statement c_whileLast _while finished_ .

Returnstmt -> return E3.

E3 -> Expression c_;.
E3 -> c_;.

Switchstmt -> _switch start_ c_switchStart switch ( Expression ) { Casestmts Defaultstmt } c_switchFinished _switch finished_ .

Casestmts -> Casestmt Casestmts.
Casestmts -> .

Casestmt -> case c_caseCheck num : Statementlist c_caseFinished.

Defaultstmt -> default : Statementlist.
Defaultstmt -> .

Expression -> _check id_ id EXEXEX.
Expression -> NewSimpleexpression.

EXEXEX -> [ Expression ] c_computeIndex EZEZEZ | = Expression c_assign | NewVarcall F3 F2 E5.

EZEZEZ -> = Expression c_assign | F3 F2 E5.

NewSimpleexpression -> NewAdditiveexpression E5.

E5 -> Relop Additiveexpression c_pushComparison.
E5 -> .

Relop -> == c_pushEquality .
Relop -> < c_pushSmallerThan .

Additiveexpression -> NewTerm F2 | _check id_ id Varcall F3 F2.

NewAdditiveexpression -> NewTerm F2.

F2 -> Addop Term c_add_or_sub F2.
F2 -> .

Addop -> + c_pushPlus .
Addop -> - c_pushMinus .

Term -> NewSignedfactor F3 | NewFactor F3 | _check id_ id Varcall F3.

NewTerm -> NewSignedfactor F3 | NewFactor F3.

F3 -> * Signedfactor c_mult F3.
F3 -> .

NewSignedfactor -> + Factor.
NewSignedfactor -> - Factor c_negate .

Signedfactor -> Factor.
Signedfactor -> + Factor.
Signedfactor -> - Factor c_negate .

F4 -> , _fun args increase_ Expression F4.
F4 -> .

NewFactor -> ( Expression ).
NewFactor -> c_pushNum num .

Factor -> ( Expression ).
Factor -> _check id_ id Varcall.
Factor -> c_pushNum num .

NewVarcall -> _check id finished_.
NewVarcall -> ( _fun args start_ Args _fun args finished_ ) c_return.

Varcall -> _check id finished_.
Varcall -> [ Expression ] c_computeIndex _check id finished_.
Varcall -> ( _fun args start_ Args _fun args finished_ ) c_return.

Args -> Arglist.
Args ->  .

Arglist -> _fun args increase_ Expression F4.

Params -> _type(int)_ int _add id_ id _var_ Paramlist.
Params -> void BB.

BB -> _inline:'illegal..'_ id Paramlist.
BB -> .

Paramlist -> E2 F1.

F1 -> , Typespecifier _add id_ id _var_ E2 F1.
F1 -> .

E2 -> [].
E2 -> .
